test/files/neg/t5589neg.check
t5589neg.scala:2: warning: `withFilter' method does not yet exist on scala.util.Either.RightProjection[Int,String], using `filter' method instead
  def f5(x: Either[Int, String])        = for ((y1, y2: String) <- x.right) yield ((y1, y2))
                                                                     ^
t5589neg.scala:2: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: String
  def f5(x: Either[Int, String])        = for ((y1, y2: String) <- x.right) yield ((y1, y2))
                                               ^
t5589neg.scala:3: warning: `withFilter' method does not yet exist on scala.util.Either.RightProjection[Int,String], using `filter' method instead
  def f6(x: Either[Int, String])        = for ((y1, y2: Any) <- x.right) yield ((y1, y2))
                                                                  ^
t5589neg.scala:3: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: String
  def f6(x: Either[Int, String])        = for ((y1, y2: Any) <- x.right) yield ((y1, y2))
                                               ^
t5589neg.scala:4: warning: `withFilter' method does not yet exist on scala.util.Either.RightProjection[Int,(String, Int)], using `filter' method instead
  def f7(x: Either[Int, (String, Int)]) = for (y1 @ Tuple1(y2) <- x.right) yield ((y1, y2))
                                                                    ^
t5589neg.scala:4: error: constructor cannot be instantiated to expected type;
 found   : (T1,)
 required: (String, Int)
  def f7(x: Either[Int, (String, Int)]) = for (y1 @ Tuple1(y2) <- x.right) yield ((y1, y2))
                                                    ^
t5589neg.scala:5: warning: `withFilter' method does not yet exist on scala.util.Either.RightProjection[Int,(String, Int)], using `filter' method instead
  def f8(x: Either[Int, (String, Int)]) = for ((y1, y2, y3) <- x.right) yield ((y1, y2))
                                                                 ^
t5589neg.scala:5: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: (String, Int)
  def f8(x: Either[Int, (String, Int)]) = for ((y1, y2, y3) <- x.right) yield ((y1, y2))
                                               ^
four warnings found
four errors found
